plugins {
    alias(libs.plugins.android.library)
    alias(libs.plugins.hilt.android)
    alias(libs.plugins.ksp)
}

android {
    namespace 'com.gustavo.brilhante.data'
    compileSdk 36
    defaultConfig {
        minSdk 24
        targetSdk 36
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    testOptions {
        unitTests.all {
            jvmArgs += [
                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                '--add-opens', 'java.base/java.util=ALL-UNNAMED',
                '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED'
            ]
        }
    }
}

kotlin.jvmToolchain(17)

dependencies {
    implementation project(':core:model')
    implementation project(':core:domain')
    implementation project(':core:storage')
    implementation project(':core:common')
    implementation libs.hilt.android
    ksp libs.hilt.compiler
    implementation libs.androidx.core.ktx
    testImplementation libs.junit
    testImplementation libs.mockk
    testImplementation libs.turbine
    testImplementation libs.kotlinx.coroutines.test
    androidTestImplementation libs.androidx.test.ext.junit
    androidTestImplementation libs.androidx.espresso.core
    androidTestImplementation libs.kotlinx.coroutines.test
    androidTestImplementation libs.turbine
    androidTestImplementation libs.androidx.room.runtime
    androidTestImplementation libs.androidx.room.ktx
}
